<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/menu_prescription"
            android:title="@string/going_medication" />
        <item
            android:icon="@drawable/menu_doctor_visit"
            android:title="@string/doctor_details" />

        <item
            android:icon="@drawable/menu_investigations"
            android:title="@string/investigation" />
        <item
            android:icon="@drawable/menu_appointments"
            android:title="@string/appointments" />

        <item
            android:icon="@drawable/menu_my_records"
            android:title="@string/my_records"
           />

        <item
            android:icon="@drawable/menu_logout"
            android:title="@string/logout" />
    </group>


</menu>