<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:orientation="vertical">

        <com.rescribe.ui.customesViews.CustomTextView
            android:textSize="@dimen/sp16"
            android:textColor="@color/tagColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:customFont="@string/roboto_bold"
            android:layout_gravity="center_vertical"
            android:text="@string/relevantkeywords" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

          <!--  <com.rescribe.ui.customesViews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_weight="1"
                style="@style/CompalintStyle"
                android:text="@string/complaint1"
                android:textColor="@color/tagColor"
                android:textSize="@dimen/sp16" />
-->
            <EditText
                style="@style/CompalintStyle"
                android:id="@+id/editTextComplaint1"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="@dimen/sp16"
                android:hint="@string/complaint1"
                android:inputType="text" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/tagColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextComplaint2"
              style="@style/CompalintStyle"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/sp16"
                android:hint="@string/complaint2"
                android:inputType="text" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/tagColor" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_rectangle_1"
        android:gravity="center"
        android:padding="@dimen/dp10"
        android:text="@string/ok"
        android:textSize="16sp"
        android:textColor="@color/white" />
</LinearLayout>
