<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingTranslation">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.rescribe.ui.customesViews.CustomTextView
            android:id="@+id/pickSpeciality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginStart="@dimen/dp10"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/pick_speciality"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            android:visibility="gone"
            app:customFont="@string/roboto_medium" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pickSpeciality"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:visibility="visible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </LinearLayout>


    <com.rescribe.ui.customesViews.CustomTextView
        android:id="@+id/displayNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp16"
        android:background="@drawable/curve_edge_blue"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp6"
        android:paddingLeft="@dimen/dp12"
        android:paddingRight="@dimen/dp12"
        android:paddingTop="@dimen/dp6"
        android:text="@string/details_note"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12"
        android:visibility="gone"
        app:customFont="@string/roboto_bold" />


    <RelativeLayout
        android:id="@+id/emptyListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp25"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/help_connect" />

    </RelativeLayout>

</RelativeLayout>
