<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.myrescribe.ui.fragments.filter.SelectDoctorsorSpecialityFragment">

    <RelativeLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp56"
        android:background="@color/tagColor">

        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20" />

        <com.myrescribe.ui.customesViews.CustomTextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            tools:text="@string/select_doctors"
            android:textColor="@color/white"
            android:textSize="@dimen/sp23"
            app:customFont="@string/roboto_bold" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/doctor_list_row"/>

</LinearLayout>
