<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:background="@drawable/curve_edges_background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp10"
            app:srcCompat="@drawable/ic_info_outline_24dp" />

        <TextView
            android:id="@+id/textview_sucess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp10"
            android:textIsSelectable="true"
            tools:text="@string/dummy_full" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_yes"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd=".5dp"
                android:layout_marginRight=".5dp"
                android:layout_marginTop="@dimen/dp8"
                android:layout_weight="1"
                android:background="@drawable/corner_left_bottom"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_no"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginTop="@dimen/dp8"
                android:layout_weight="1"
                android:layout_marginStart=".5dp"
                android:layout_marginLeft=".5dp"
                android:background="@drawable/corner_right_bottom"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>