<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rescribe.ui.activities.VitalGraphDetailsActivity"
    tools:showIn="@layout/activity_vital_graph_details">

    <LinearLayout
        android:id="@+id/layout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp14"
        android:paddingTop="@dimen/dp8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dp14"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp14"
            android:paddingStart="@dimen/dp20">

            <ImageView
                android:id="@+id/ellipse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp4"
                android:src="@drawable/ellipse_3" />

            <com.rescribe.ui.customesViews.CustomTextView
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp34"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ellipse"
                android:layout_toRightOf="@id/ellipse"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp10"
                android:paddingStart="@dimen/dp10"
                android:textColor="@color/tagColor"
                android:textSize="@dimen/sp16"
                app:customFont="@string/roboto_bold"
                tools:text="130/88 mm Hg" />


        </RelativeLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp46"
            android:paddingStart="@dimen/dp46"
            tools:text="23rd  Aug’17 " />

        <android.support.v7.widget.CardView
            android:id="@+id/graphCard"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="@dimen/dp16"
            app:cardBackgroundColor="@color/tagColor"
            app:cardCornerRadius="@dimen/dp10">


        </android.support.v7.widget.CardView>

        <com.rescribe.ui.customesViews.CustomTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/dp24"
            app:customFont="@string/roboto_medium"
            android:textSize="@dimen/sp14"
            android:paddingStart="@dimen/dp24"
            android:text="@string/dummy_full" />

    </LinearLayout>

</ScrollView>
